--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@
     }
     
     .testimonial-card::before {
-      content: """;
+      content: "";
       position: absolute;
       top: 20px;
       left: 20px;
